--- a/games/rock/css/styles.css
+++ b/games/rock/css/styles.css
@@ -79,11 +79,11 @@ html{
 }
 
 .nav{
-  position: -webkit-sticky;
   position: sticky;
   top: 95%;
   height: 50px;
   background: var(--bg3);
+  z-index: 200;
 }
 
 .nav_container{
